--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,14 @@
 # platform: linux-64
 _libgcc_mutex=0.1=main
 _openmp_mutex=5.1=1_gnu
+accesscontrol=7.0=pypi_0
+acquisition=6.0=pypi_0
 alabaster=0.7.13=pypi_0
 altgraph=0.17.3=py310h06a4308_0
 amqp=2.6.1=py_0
 asgiref=3.8.1=py310h06a4308_0
 asttokens=2.0.5=pyhd3eb1b0_0
+authencoding=5.0=pypi_0
 babel=2.13.1=pypi_0
 backcall=0.2.0=pyhd3eb1b0_0
 billiard=3.6.4.0=py310h7f8727e_0
@@ -16,6 +19,7 @@ boltons=23.0.0=py310h06a4308_0
 brotli=1.0.9=h5eee18b_7
 brotli-bin=1.0.9=h5eee18b_7
 brotlipy=0.7.0=py310h7f8727e_1002
+btrees=6.0=pypi_0
 bzip2=1.0.8=h7b6447c_0
 c-ares=1.19.1=h5eee18b_0
 ca-certificates=2024.7.2=h06a4308_0
@@ -23,6 +27,7 @@ cachelib=0.9.0=py310h06a4308_0
 celery=4.4.0=py_0
 certifi=2024.7.4=py310h06a4308_0
 cffi=1.15.1=py310h5eee18b_3
+chameleon=4.5.4=pypi_0
 charset-normalizer=2.0.4=pyhd3eb1b0_0
 click=8.0.4=py310h06a4308_0
 colorama=0.4.6=py310h06a4308_0
@@ -31,8 +36,10 @@ conda=23.7.2=py310h06a4308_0
 conda-package-handling=2.2.0=py310h06a4308_0
 conda-package-streaming=0.9.0=py310h06a4308_0
 contourpy=1.0.5=py310hdb19cb5_0
-cryptography=41.0.3=py310h130f0dd_0
+cryptography=43.0.0=pypi_0
 cycler=0.11.0=pyhd3eb1b0_0
+cyrus-sasl=2.1.28=h9c0eb46_1
+datetime=5.5=pypi_0
 dbus=1.13.18=hb2f20db_0
 debugpy=1.5.1=py310h295c915_0
 decorator=5.1.1=pyhd3eb1b0_0
@@ -46,12 +53,14 @@ django-filter=23.2=pypi_0
 django-otp=1.2.4=pypi_0
 django4-background-tasks=1.2.7=pypi_0
 djangorestframework=3.15.2=pypi_0
+documenttemplate=4.6=pypi_0
 docutils=0.18.1=py310h06a4308_3
 executing=0.8.3=pyhd3eb1b0_0
 expat=2.4.9=h6a678d5_0
+extensionclass=5.1=pypi_0
 flask=2.2.2=py310h06a4308_0
 flask-session=0.4.0=py310h06a4308_0
-fontconfig=2.14.1=h52c9d5c_1
+fontconfig=2.14.1=h4c34cd2_2
 fonttools=4.25.0=pyhd3eb1b0_0
 freetype=2.12.1=h4a9f257_0
 gevent=23.9.1=py310h5eee18b_0
@@ -60,9 +69,9 @@ glib=2.69.1=he621ea3_2
 greenlet=2.0.1=py310h6a678d5_0
 gst-plugins-base=1.14.1=h6a678d5_1
 gstreamer=1.14.1=h5eee18b_1
-gunicorn=20.1.0=py310h06a4308_0
+gunicorn=22.0.0=py310h06a4308_0
 icu=58.2=he6710b0_3
-idna=3.4=py310h06a4308_0
+idna=3.7=py310h06a4308_0
 imagesize=1.4.1=py310h06a4308_0
 intel-openmp=2021.4.0=h06a4308_3561
 ipykernel=6.19.2=py310h2f386ee_0
@@ -84,7 +93,9 @@ lerc=3.0=h295c915_0
 libbrotlicommon=1.0.9=h5eee18b_7
 libbrotlidec=1.0.9=h5eee18b_7
 libbrotlienc=1.0.9=h5eee18b_7
-libclang=10.0.1=default_hb85057a_2
+libclang=14.0.6=default_hc6dbbc7_1
+libclang13=14.0.6=default_he11475f_1
+libcups=2.4.2=ha637b67_0
 libdeflate=1.17=h5eee18b_0
 libedit=3.1.20221030=h5eee18b_0
 libev=4.33=h7f8727e_1
@@ -94,6 +105,7 @@ libgcc-ng=11.2.0=h1234567_1
 libgomp=11.2.0=h1234567_1
 libllvm10=10.0.1=hbcb73fb_5
 libllvm11=11.1.0=h9e868ea_6
+libllvm14=14.0.6=hdb19cb5_3
 libpng=1.6.39=h5eee18b_0
 libpq=12.15=h37d81fd_1
 libsodium=1.0.18=h7b6447c_0
@@ -101,12 +113,12 @@ libstdcxx-ng=11.2.0=h1234567_1
 libtiff=4.5.0=h6a678d5_2
 libuuid=1.41.5=h5eee18b_0
 libuv=1.44.2=h5eee18b_0
-libwebp=1.2.4=h11a3e52_1
-libwebp-base=1.2.4=h5eee18b_1
+libwebp=1.3.2=h11a3e52_0
+libwebp-base=1.3.2=h5eee18b_0
 libxcb=1.15=h7f8727e_0
-libxkbcommon=1.0.1=hfa300c1_0
-libxml2=2.9.14=h74e7548_0
-libxslt=1.1.35=h4e12654_0
+libxkbcommon=1.0.1=h5eee18b_1
+libxml2=2.10.4=hcbfbd50_0
+libxslt=1.1.37=h2085143_0
 llvmlite=0.39.1=py310he621ea3_0
 lz4-c=1.9.4=h6a678d5_0
 markdown=3.4.1=py310h06a4308_0
@@ -118,7 +130,10 @@ mkl=2021.4.0=h06a4308_640
 mkl-service=2.4.0=py310h7f8727e_0
 mkl_fft=1.3.1=py310hd6ae3a3_0
 mkl_random=1.2.2=py310h00e6091_0
+multimapping=5.0=pypi_0
+multipart=0.2.5=pypi_0
 munkres=1.1.4=py_0
+mysql=5.7.24=he378463_2
 mysql-connector-c=6.1.11=h24aacaa_2
 mysqlclient=2.0.3=py310h295c915_1
 ncurses=6.4=h6a678d5_0
@@ -128,13 +143,17 @@ nss=3.89.1=h6a678d5_0
 numba=0.56.4=py310h1128e8f_0
 numpy=1.23.5=py310hd5efca6_0
 numpy-base=1.23.5=py310h8e6c178_0
+openjpeg=2.5.2=he7f1fd0_0
 openssl=1.1.1w=h7f8727e_0
 packaging=23.0=py310h06a4308_0
 parso=0.8.3=pyhd3eb1b0_0
+pastedeploy=3.1.0=pypi_0
 pcre=8.45=h295c915_0
+persistence=5.0=pypi_0
+persistent=6.0=pypi_0
 pexpect=4.8.0=pyhd3eb1b0_3
 pickleshare=0.7.5=pyhd3eb1b0_1003
-pillow=9.4.0=py310h6a678d5_0
+pillow=10.4.0=py310h5eee18b_0
 pip=23.0.1=py310h06a4308_0
 platformdirs=2.5.2=py310h06a4308_0
 pluggy=1.0.0=py310h06a4308_1
@@ -148,7 +167,7 @@ pycparser=2.21=pyhd3eb1b0_0
 pygments=2.17.2=pypi_0
 pyinstaller=5.6.2=py310h5eee18b_0
 pyinstaller-hooks-contrib=2022.14=py310h06a4308_0
-pyopenssl=23.2.0=py310h06a4308_0
+pyopenssl=24.2.1=pypi_0
 pyotp=2.8.0=pypi_0
 pyparsing=3.0.9=py310h06a4308_0
 pypng=0.20220715.0=pypi_0
@@ -157,15 +176,18 @@ pyqt5-sip=12.11.0=pypi_0
 pysocks=1.7.1=py310h06a4308_0
 python=3.10.13=h7a1cb2a_0
 python-dateutil=2.8.2=pyhd3eb1b0_0
+python-gettext=5.0=pypi_0
 python-nmap=0.7.1=pypi_0
 pytz=2022.7=py310h06a4308_0
 pyzmq=23.2.0=py310h6a678d5_0
 qrcode=7.4.2=pypi_0
-qt-main=5.15.2=h327a75a_7
-qt-webengine=5.15.9=hd2b0992_4
-qtwebkit=5.212=h4eab89a_4
+qt-main=5.15.2=h5b8104b_9
+qt-webengine=5.15.9=h9ab4d14_7
+qtwebkit=5.212=h3fafdc1_5
 readline=8.2=h5eee18b_0
 requests=2.32.3=py310h06a4308_0
+restrictedpython=7.2=pypi_0
+roman=4.2=pypi_0
 ruamel.yaml=0.17.21=py310h5eee18b_0
 ruamel.yaml.clib=0.2.6=py310h5eee18b_1
 scapy=2.4.3=py_0
@@ -194,6 +216,7 @@ toolz=0.12.0=py310h06a4308_0
 tornado=6.4.1=py310h5eee18b_0
 tqdm=4.66.5=py310h2f386ee_0
 traitlets=5.7.1=py310h06a4308_0
+transaction=4.0=pypi_0
 typing-extensions=4.8.0=pypi_0
 typing_extensions=4.11.0=py310h06a4308_0
 tzdata=2023c=h04d1e81_0
@@ -201,12 +224,61 @@ urllib3=2.2.2=pypi_0
 validate-email-address=1=pypi_0
 vine=1.3.0=pypi_0
 wcwidth=0.2.5=pyhd3eb1b0_0
+webob=1.8.8=pypi_0
+webtest=3.0.1=pypi_0
 werkzeug=3.0.3=py310h06a4308_0
 wheel=0.38.4=py310h06a4308_0
+wsgiproxy2=0.5.1=pypi_0
 xz=5.4.6=h5eee18b_0
+z3c-pt=4.4=pypi_0
+zc-lockfile=3.0.post1=pypi_0
+zconfig=4.1=pypi_0
 zeromq=4.3.4=h2531618_0
+zexceptions=5.0=pypi_0
 zlib=1.2.13=h5eee18b_0
-zope=1.0=py310h06a4308_1
+zodb=6.0=pypi_0
+zodbpickle=4.0=pypi_0
+zope=5.10=pypi_0
+zope-annotation=5.0=pypi_0
+zope-browser=3.0=pypi_0
+zope-browsermenu=5.0=pypi_0
+zope-browserpage=5.0=pypi_0
+zope-browserresource=5.1=pypi_0
+zope-cachedescriptors=5.0=pypi_0
+zope-component=6.0=pypi_0
+zope-configuration=5.0.1=pypi_0
+zope-container=6.0=pypi_0
+zope-contentprovider=6.0=pypi_0
+zope-contenttype=5.1=pypi_0
+zope-datetime=5.0.0=pypi_0
+zope-deferredimport=5.0=pypi_0
+zope-deprecation=5.0=pypi_0
+zope-dottedname=6.0=pypi_0
+zope-exceptions=5.1=pypi_0
+zope-filerepresentation=6.0=pypi_0
+zope-globalrequest=2.0=pypi_0
+zope-hookable=6.0=pypi_0
+zope-i18n=5.1=pypi_0
+zope-i18nmessageid=6.1.0=pypi_0
+zope-lifecycleevent=5.0=pypi_0
+zope-location=5.0=pypi_0
+zope-pagetemplate=5.1=pypi_0
+zope-processlifetime=3.0=pypi_0
+zope-proxy=5.3=pypi_0
+zope-ptresource=5.0=pypi_0
+zope-publisher=7.0=pypi_0
+zope-schema=7.0.1=pypi_0
+zope-security=7.1=pypi_0
+zope-sequencesort=5.0=pypi_0
+zope-site=5.0=pypi_0
+zope-size=5.0=pypi_0
+zope-structuredtext=5.0=pypi_0
+zope-tal=5.0.1=pypi_0
+zope-tales=6.0=pypi_0
+zope-testbrowser=7.0=pypi_0
+zope-testing=5.0.1=pypi_0
+zope-traversing=5.0=pypi_0
+zope-viewlet=5.0=pypi_0
 zope.event=5.0=py310h06a4308_0
 zope.interface=5.4.0=py310h7f8727e_0
 zstandard=0.19.0=py310h5eee18b_0
